--- a/HW2_forecasting.ipynb
+++ b/HW2_forecasting.ipynb
@@ -116,7 +116,7 @@
    "id": "dec17eae",
    "metadata": {},
    "source": [
-    "## Useful links"
+    "## Data Preparation:"
    ]
   },
   {
@@ -241,6 +241,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cba39460",
+   "metadata": {},
+   "source": [
+    "## Correlation Analysis:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "d424580e",
@@ -292,6 +300,22 @@
     "plt.xticks(rotation=45, ha='right')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c81c9f0",
+   "metadata": {},
+   "source": [
+    "## Models:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "414c999d",
+   "metadata": {},
+   "source": [
+    "# First MIDAS model:"
    ]
   },
   {
@@ -1032,6 +1056,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97a6f351",
+   "metadata": {},
+   "source": [
+    "## USTPU"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "d2284451",
@@ -1058,6 +1090,14 @@
     "                                   verbose = False)\n",
     "\n",
     "print(\"RMSE for the first model:\", rmse1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "571862cf",
+   "metadata": {},
+   "source": [
+    "## USTPU + USWTRADE"
    ]
   },
   {
@@ -1089,6 +1129,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3474e5f",
+   "metadata": {},
+   "source": [
+    "## USTPU + USWTRADE + PAYEMS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "3831ff80",
@@ -1114,6 +1162,14 @@
     "                                   poly_list = [\"expalmon\", \"expalmon\", \"expalmon\"],\n",
     "                                   verbose = False)\n",
     "print(\"RMSE for the third model:\", rmse3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aed8882",
+   "metadata": {},
+   "source": [
+    "## USTPU + USWTRADE + PAYEMS + USGOOD"
    ]
   },
   {
@@ -1144,246 +1200,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "89183139",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "datetime64[ns]",
-         "type": "datetime"
-        },
-        {
-         "name": "preds",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "targets",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "2e6d8e6b-e84e-48cd-b753-71604ad3312d",
-       "rows": [
-        [
-         "2016-12-01 00:00:00",
-         "0.35616914393377064",
-         "0.5527685286210726"
-        ],
-        [
-         "2017-03-01 00:00:00",
-         "0.4896778253909275",
-         "0.48570873310360696"
-        ],
-        [
-         "2017-06-01 00:00:00",
-         "0.5631192307671422",
-         "0.5583111012978037"
-        ],
-        [
-         "2017-09-01 00:00:00",
-         "0.47905812811844967",
-         "0.785431525684821"
-        ],
-        [
-         "2017-12-01 00:00:00",
-         "0.5308843110474009",
-         "1.1207427769393874"
-        ],
-        [
-         "2018-03-01 00:00:00",
-         "1.1293245215491572",
-         "0.8101194549169577"
-        ],
-        [
-         "2018-06-01 00:00:00",
-         "0.5471156469772445",
-         "0.5294212303768475"
-        ],
-        [
-         "2018-09-01 00:00:00",
-         "0.2462540258173858",
-         "0.621760482522582"
-        ],
-        [
-         "2018-12-01 00:00:00",
-         "0.38117132807472665",
-         "0.14154399831838305"
-        ],
-        [
-         "2019-03-01 00:00:00",
-         "0.40622100477169637",
-         "0.6223772907267389"
-        ],
-        [
-         "2019-06-01 00:00:00",
-         "0.24850798539862234",
-         "0.8316777932895647"
-        ],
-        [
-         "2019-09-01 00:00:00",
-         "0.6921256812682908",
-         "1.1632102580909631"
-        ],
-        [
-         "2019-12-01 00:00:00",
-         "0.710016484429078",
-         "0.6795635968053659"
-        ],
-        [
-         "2020-03-01 00:00:00",
-         "-0.9694705201282217",
-         "-1.4022264902518344"
-        ],
-        [
-         "2020-06-01 00:00:00",
-         "-8.21360876374597",
-         "-8.239258989513054"
-        ]
-       ],
-       "shape": {
-        "columns": 2,
-        "rows": 15
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>preds</th>\n",
-       "      <th>targets</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2016-12-01</th>\n",
-       "      <td>0.356169</td>\n",
-       "      <td>0.552769</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-03-01</th>\n",
-       "      <td>0.489678</td>\n",
-       "      <td>0.485709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-06-01</th>\n",
-       "      <td>0.563119</td>\n",
-       "      <td>0.558311</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-09-01</th>\n",
-       "      <td>0.479058</td>\n",
-       "      <td>0.785432</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-12-01</th>\n",
-       "      <td>0.530884</td>\n",
-       "      <td>1.120743</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-03-01</th>\n",
-       "      <td>1.129325</td>\n",
-       "      <td>0.810119</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-06-01</th>\n",
-       "      <td>0.547116</td>\n",
-       "      <td>0.529421</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-09-01</th>\n",
-       "      <td>0.246254</td>\n",
-       "      <td>0.621760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-01</th>\n",
-       "      <td>0.381171</td>\n",
-       "      <td>0.141544</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-03-01</th>\n",
-       "      <td>0.406221</td>\n",
-       "      <td>0.622377</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-06-01</th>\n",
-       "      <td>0.248508</td>\n",
-       "      <td>0.831678</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-09-01</th>\n",
-       "      <td>0.692126</td>\n",
-       "      <td>1.163210</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-01</th>\n",
-       "      <td>0.710016</td>\n",
-       "      <td>0.679564</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-03-01</th>\n",
-       "      <td>-0.969471</td>\n",
-       "      <td>-1.402226</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-06-01</th>\n",
-       "      <td>-8.213609</td>\n",
-       "      <td>-8.239259</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               preds   targets\n",
-       "2016-12-01  0.356169  0.552769\n",
-       "2017-03-01  0.489678  0.485709\n",
-       "2017-06-01  0.563119  0.558311\n",
-       "2017-09-01  0.479058  0.785432\n",
-       "2017-12-01  0.530884  1.120743\n",
-       "2018-03-01  1.129325  0.810119\n",
-       "2018-06-01  0.547116  0.529421\n",
-       "2018-09-01  0.246254  0.621760\n",
-       "2018-12-01  0.381171  0.141544\n",
-       "2019-03-01  0.406221  0.622377\n",
-       "2019-06-01  0.248508  0.831678\n",
-       "2019-09-01  0.692126  1.163210\n",
-       "2019-12-01  0.710016  0.679564\n",
-       "2020-03-01 -0.969471 -1.402226\n",
-       "2020-06-01 -8.213609 -8.239259"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df4"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "93453606",
    "metadata": {},
@@ -1396,7 +1212,7 @@
    "id": "0ce3801c",
    "metadata": {},
    "source": [
-    "Model using PCA:"
+    "## Feature reduction using PCA:"
    ]
   },
   {
@@ -1538,26 +1354,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "c55dcbdd",
+   "cell_type": "markdown",
+   "id": "6f4efbe0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (299934678.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mUSTPU       0.290562\u001b[39m\n                ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "USTPU       0.290562\n",
-    "USWTRADE    0.278163\n",
-    "PAYEMS      0.248913\n",
-    "USTRADE     0.245584\n",
-    "USGOOD      0.243852"
+    "## Model Comparison:"
    ]
   },
   {
